# devserver

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  PROJECT.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: docker-build.yml  test.yml
bastion/: Dockerfile  Makefile  README.md  entrypoint.sh  user-controller.py
bastion/config/: motd  sshd_config
bastion/config/profile.d/: devserver.sh
bastion/k8s/: deployment.yaml  namespace.yaml  rbac.yaml  service.yaml
bastion/scripts/: deploy-bastion.sh  test-ssh.sh
cli/: README.md  pyproject.toml
cli/devctl/: __init__.py  main.py  main_old.py
cli/devctl/api/: __init__.py  devserver.py  kubectl.py
cli/devctl/commands/: __init__.py  devserver.py  info.py  status.py  test.py
cli/devctl/config/: settings.py
cli/devctl/ui/: __init__.py  console.py
crds/: devserver.io_devserverflavors.yaml  devserver.io_devservers.yaml  devserver.io_devserverusers.yaml
dev/: README.md  bootstrap_operator.py  dev_watch.py  run_operator.py
dev/docs/: generate_doc_updates.py
dev/eks/: README.md  cpu-arm64-nodepool.yml  gpu-nodepool.yml
devserver-operator/: Makefile  PROJECT  README.md  go.mod
devserver-operator/api/v1/: devserver_types.go  devserverflavor_types.go  groupversion_info.go  zz_generated.deepcopy.go
devserver-operator/cmd/: main.go
devserver-operator/config/crd/: kustomization.yaml
devserver-operator/config/default/: kustomization.yaml  metrics_service.yaml
devserver-operator/config/manager/: kustomization.yaml  manager.yaml
devserver-operator/config/network-policy/: allow-metrics-traffic.yaml
devserver-operator/config/prometheus/: monitor.yaml
devserver-operator/config/rbac/: devserver_admin_role.yaml  devserver_editor_role.yaml  devserver_viewer_role.yaml  devserverflavor_admin_role.yaml  devserverflavor_editor_role.yaml  devserverflavor_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
devserver-operator/config/samples/: devservers_v1_devserver.yaml  devservers_v1_devserverflavor.yaml  kustomization.yaml
devserver-operator/internal/controller/: devserver_controller.go  devserver_controller_test.go  devserverflavor_controller.go  devserverflavor_controller_test.go  suite_test.go
devserver-operator/scripts/: deploy-operator.sh  test-operator.sh
devserver-operator/test/e2e/: e2e_suite_test.go  e2e_test.go
devserver_operator/: __init__.py
docker/: README.md  entrypoint.sh
docker/base/: Dockerfile  bashrc  generate_motd.sh  motd_script  profile.sh  zshrc
docker/sshd/: Dockerfile
docker/static-dependencies/: Dockerfile
examples/: devserver-sample.yaml
examples/flavors/: cpu-small.yaml  gpu-small.yaml
examples/users/: test-user.yaml
rbac/: admin-cluster-role.yaml  user-cluster-role.yaml
reference/: MIGRATION_PLAN.md
reference/gpu-dev-cli/gpu_dev_cli/: auth.py  cli.py  interactive.py  name_generator.py  reservations.py
reference/terraform-gpu-devservers/examples/: README.md  test-coexist.yaml  test-dynamic-full.yaml  test-dynamic-large.yaml  test-dynamic-medium.yaml  test-dynamic-small.yaml
scripts/: build-bastion.sh  deploy-bastion.sh  generate-user-kubeconfig.sh  test-ssh.sh
src/: README.md
src/cli/: handlers.py  main.py
src/devserver/cli/: README.md  config.py  handlers.py  main.py  ssh_config.py  utils.py
src/devserver/crds/: __init__.py  const.py  devserver.py
src/devserver/operator/: README.md  __init__.py  host_keys.py  lifecycle.py  operator.py  reconciler.py  user_reconciler.py  utils.py  validation.py
src/devserver/utils/: network.py  time.py  users.py
src/devserver_operator/: README.md  operator.py
src/devserver_operator/resources/: services.py  statefulset.py
src/devservers/: README.md
src/devservers/cli/: README.md  __init__.py  config.py  main.py  ssh_config.py
src/devservers/crds/: README.md  __init__.py  base.py  devserver.py  errors.py
tests/: README.md  conftest.py  helpers.py  test_cli.py  test_crds.py  test_crds_base.py  test_crds_devserver.py  test_devserver_crd_object.py  test_devserverflavor_handler.py  test_errors.py  test_flavor_reconciler.py  test_lifecycle.py  test_motd.py  test_operator.py  test_ssh.py  test_startup_script.py  test_storage.py  test_user_reconciler.py
tests/e2e/: test_lifecycle.py
(+58 files in other folders)
