[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devserver-operator"
version = "0.0.1"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A Kubernetes operator for dev servers."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "kopf",
    "kubernetes",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
devctl = "cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
