[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devserver-operator"
version = "0.0.1"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A Kubernetes operator for dev servers."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "kopf>=1.37.0",  # Use newer version for better asyncio compatibility
    "kubernetes>=28.1.0",  # Use newer version to avoid deprecation warnings
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "ruff",
    "ty",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
devctl = "devserver.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:kubernetes.client.rest",
]

[tool.ruff]
exclude = ["reference"]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["reference"]
