[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devserver-operator"
version = "0.0.1"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A Kubernetes operator for dev servers."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "kopf>=1.37.0",  # Use newer version for better asyncio compatibility
    "kubernetes>=28.1.0",  # Use newer version to avoid deprecation warnings
    "rich",
    "click>=8.0",
    "PyYAML>=6.0.1",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
devctl = "devserver.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"devserver.operator.resources" = ["*.sh"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:kubernetes.client.rest",
]

[tool.ruff]
exclude = ["reference"]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["reference"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest",
    "pytest-monitor",
    "pytest-xdist",
    "pytest-asyncio",
    "pre-commit",
    "ruff",
    "pytest-sugar>=1.1.1",
    "ty",
]
