[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devctl"
version = "0.1.0"
description = "Phase 1 CLI for PyTorch development servers bastion"
authors = [{name = "DevServer Team", email = "devops@company.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "click>=8.0.0",
    "rich>=12.0.0",
]

[project.scripts]
devctl = "devctl.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["devctl*"]
