[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devctl"
version = "0.3.0"
description = "CLI for managing DevServers on Kubernetes"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "rich",
]

[project.scripts]
devctl = "devctl.main:cli"

[tool.setuptools.packages.find]
where = ["."]
